apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  # Change this to NodePort or LoadBalancer if you want external access:
  # type: NodePort
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 80
      targetPort: 8123
