apps/home-assistant/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
 spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - ha.bergtobias.com
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
